# mlops

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.demo  Dockerfile.fastapi  Makefile  README.md  cloudbuild.yaml  conftest.py  create-listing.sh  docker-compose.yml  init.sh  main.py  notebook.ipynb  pyproject.toml  requirements.txt  server.py  terraform.tfstate  yolo.py
.github/: dependabot.yml
.github/workflows/: lint.yml  tests.yml
fixtures/: fulfillment-policy.json  offer.json  payment-policy.json  return-policy.json
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/design_handoff_ebay_operator/: README.md  hero-animation.jsx  index.html  items-data.jsx
frontend/e2e/: ports.ts  posts.live.spec.ts  posts.spec.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: PostList.test.tsx  PostList.tsx
frontend/src/hero/: animations.tsx  hero-scene.tsx  items-data.tsx
frontend/src/pages/: AppPage.tsx  WelcomePage.tsx
frontend/src/types/: post.ts
milestone2/fastapi/: main.py
pkg/: __init__.py  config.py  ebay.py  ebay_cli.py  ebay_listing_prefill.py  ebay_tokens.py  firestore_mongo.py  gcs.py  gemini.py  logging_context.py
pkg/posts/: __init__.py  models.py  mongo_repository.py  repository.py
product_analyzer/: .env.example  README.md  __init__.py  analyzer.py  app.py  encoding.py  evaluation.py  gemini_vision.py  parser.py  pricing.py  prompt.py  requirements.txt  router.py  schema.py  service.py  tracking.py  validation.py
product_analyzer/tests/: test_analyzer.py  test_evaluation.py  test_gemini_vision.py  test_service_bytes.py  test_service_tracking.py  test_tracking.py
scripts/completion/: README.md  _ebay-cli
static/: index.html
static/assets/: index-BnJduCxW.js  index-X0VRqj3R.css
submission2/: submission.md
terraform/: cloudbuild_iam.tf  github_ui_trigger.tf  main.tf  monitoring.tf  outputs.tf  ui.tf  variables.tf  versions.tf  vertex_ai.tf
tests/: test_posts_api.py  test_posts_e2e.py  test_posts_image_analysis.py  test_server.py
tests/pkg/: test_config.py  test_ebay.py  test_ebay_cli.py  test_ebay_listing_prefill.py  test_ebay_sandbox.py  test_ebay_tokens.py  test_firestore_mongo.py  test_gcs.py  test_gemini.py  test_posts_mongo_integration.py  test_posts_repository.py
