[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.82",
    "google-cloud-storage>=2.0.0",
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mlflow>=2.0.0",
    "pandas>=2.0.0,<3",
    "httpx>=0.27.0",
    "pytest>=9.0.2",
    "statsmodels>=0.14.6",
    "uvicorn>=0.42.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
